cmake_minimum_required(VERSION 3.27)
project(CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(CPP
        "January Files/10 Jan/InsertInArray.cpp"
        "January Files/11 Jan/BinarySearch.cpp"
        "January Files/12 Jan/ReverseOrderBinarySearch.cpp"
        "January Files/12 Jan/RotatedBinarySearch.cpp"
        "January Files/12 Jan/RotatedKeyBinarySearch.cpp"
        "January Files/15 Jan/SearchLowestEvenNumber.cpp"
        "January Files/15 Jan/TwoSumBinarySearch.cpp"
        "January Files/15 Jan/FirstMissingPositive.cpp"
        "January Files/17 Jan/sortCharArray.cpp"
        "January Files/17 Jan/StringToInteger.cpp"
        "January Files/17 Jan/sortArray2.cpp"
        "January Files/17 Jan/AddTwoString.cpp"
        "January Files/18 Jan/firstandLastIndex.cpp"
        "January Files/18 Jan/substringWithoutRepeating.cpp"
        "January Files/19 January/largest.cpp"
        "January Files/19 January/sort0123.cpp"
        "January Files/22 January/BubbleSort.cpp"
        "January Files/22 January/InsertionSort.cpp"
        "January Files/22 January/MaximumWindowWithSumk.cpp"
        "January Files/22 January/SelectionSort.cpp"
)
